add appstore link

--- a/src/apps.json
+++ b/src/apps.json
@@ -2,7 +2,7 @@
   {
     "name": "Move The Box",
     "description": "a 2D game built with SpritKit, using minimalistic design. Just move the box the the empty space.",
-    "appStoreURL": "https://www.google.com",
+    "appStoreURL": "https://apps.apple.com/app/id1541557875",
     "privacyPolicyURL": "https://www.google.com",
     "termsAndConditionsURL": "https://www.google.com",
     "icon": "images/moveTheBox.png"
